fix footer overflow

--- a/client/app/common/footer/footer.styl
+++ b/client/app/common/footer/footer.styl
@@ -1,5 +1,8 @@
 @import '../../styles/variables'
 
+fr-footer
+  overflow hidden
+
 footer
   position relative
   z-index 3
